--- a/main.css
+++ b/main.css
@@ -54,9 +54,9 @@ a:hover {
   color: #fff;
 }
 
-.unbreakable {
+/*.unbreakable {
   white-space: nowrap;
-}
+}*/
 
 .align--center {
   text-align: center;
@@ -65,6 +65,15 @@ a:hover {
 .uppercase {
   text-transform: uppercase;
 }
+
+@media screen and (min-width: 60em) {
+
+  .unbreakable {
+    white-space: nowrap;
+  }
+
+}
+
 
 
 /* Grid system ---------------------------------------- */
@@ -160,6 +169,7 @@ h3.headline {
   .pageHeader {
     margin-bottom: 3rem;
   }
+
 }
 
 
@@ -172,6 +182,7 @@ h3.headline {
 @media screen and (min-width: 60em) {
   .program__row {
     margin-bottom: 3rem;
+    width: 975px;
   }
 
   .program__col + .program__col {
@@ -235,4 +246,20 @@ h3.headline {
 .pageFooter__item__link {
   display: inline-block;
   margin-right: 1em;
+}
+
+@media screen and (min-width:1em) {
+
+  .pageFooter__item__link {
+    margin-bottom: 1.5em;
+  }
+
+}
+
+@media screen and (max-width: 420px) {
+
+  .pageFooter__item__link {
+    display: block;
+  }
+
 }
