--- a/main.css
+++ b/main.css
@@ -56,15 +56,12 @@ a:hover {
   text-align: center;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.unbreakable {
+  white-space: nowrap;
 }
 
-@media screen and (min-width: 60em) {
-  .unbreakable {
-    white-space: nowrap;
-  }
-
+.uppercase {
+  text-transform: uppercase;
 }
 
 
@@ -135,19 +132,21 @@ h3.headline {
 
 .banner {
   padding: 1em;
-  width: 360px;
   font-size: 1.5rem;
 }
+
 
 @media screen and (min-width: 60em) {
   .banner {
     margin: 0 auto 30px;
+    text-align: center;
+  }
+
+  .banner a {
     padding: 0 1em;
-    width: 520px;
     border-right: 2px solid hsl(48, 89%, 60%);
     border-left: 2px solid hsl(48, 89%, 60%);
     border-radius: 5px;
-    text-align: center;
   }
 
 }
@@ -228,8 +227,10 @@ h3.headline {
   margin-bottom: 0.5em;
 }
 
-.vertical-padding {
-  padding: 20px 0 0;
+.attentionText {
+  margin: 1.5em 0;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 
@@ -262,20 +263,14 @@ h3.headline {
 }
 
 .pageFooter__item__link {
-  display: inline-block;
-  margin-right: 1em;
+  display: block;
+  margin-bottom: 1.5em;
 }
 
-@media screen and (min-width:1em) {
+@media screen and (min-width: 30em) {
   .pageFooter__item__link {
-    margin-bottom: 1.5em;
-  }
-
-}
-
-@media screen and (max-width: 420px) {
-  .pageFooter__item__link {
-    display: block;
+    display: inline-block;
+    margin: .75em .5em;
   }
 
 }
