--- a/main.css
+++ b/main.css
@@ -125,6 +125,7 @@ h3.headline {
 
 .headline__line {
   display: block;
+  white-space: nowrap;
 }
 
 
@@ -166,7 +167,7 @@ h3.headline {
 }
 
 .pageHeader__primary {
-  font-size: 4.2rem;
+  font-size: 3.8rem;
   margin-bottom: 0.1em;
 }
 
@@ -174,8 +175,20 @@ h3.headline {
   letter-spacing: 1.05em;
   margin-right: -1.05em;
   color: #4d4d4d;
-  font-size: 2.2rem;
+  font-size: 1.98rem;
   text-shadow: none;
+}
+
+@media screen and (min-width: 30em) {
+
+  .pageHeader__primary {
+    font-size: 4.2rem;
+  }
+
+  .pageHeader__secondary {
+    font-size: 2.2rem;
+  }
+
 }
 
 @media screen and (min-width: 60em) {
