--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ a:visited {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-shadow: 2px 2px 5px #222;
 }
 
 
@@ -129,28 +129,25 @@ h3.headline {
 }
 
 
-/* Call To Action ---------------------------------------- */
+/* Banner ---------------------------------------- */
 
-.callToActionWrap {
-  display: block;
-  text-align: center;
-}
-
-a.callToAction-signUp {
-  color: #4d4d4d;
-  display: block;
-  margin: 0 1em;
-  padding: .5em 0em;
-  background-color: hsl(48, 89%, 78%);
-  border-radius: 5px;
+.banner {
+  padding: 1em;
+  font-size: 1.5rem;
 }
 
 
 @media screen and (min-width: 60em) {
-  a.callToAction-signUp {
-    display: inline-block;
-    margin: 0 1em 2em;
-    padding: .5em 1em;
+  .banner {
+    margin: 0 auto 30px;
+    text-align: center;
+  }
+
+  .banner a {
+    padding: 0 1em;
+    border-right: 2px solid hsl(48, 89%, 60%);
+    border-left: 2px solid hsl(48, 89%, 60%);
+    border-radius: 5px;
   }
 
 }
@@ -239,22 +236,22 @@ a.callToAction-signUp {
 
 /* Content ---------------------------------------- */
 
-.content p {
-  margin-bottom: 0.5em;
-}
-
-.crappy-class-name {
-  padding: 1em 0 0;
-}
-
-a.callToAction-register {
+a.callToAction {
   display: block;
   margin: 1em 0;
   color: #4d4d4d;
   background-color: hsl(48, 89%, 78%);
-  border-radius: 5px;
   padding: 1.5em;
   text-align: center;
+  text-shadow: none;
+}
+
+.content p {
+  margin-bottom: 0.5em;
+}
+
+.content-extraPadding {
+  padding: 1em 0 0;
 }
 
 
