--- a/main.css
+++ b/main.css
@@ -4,11 +4,6 @@
   box-sizing: border-box;
 }
 
-html, body {
-  width: 100vw;
-  height: 100vh;
-}
-
 html, body,
 h1, h2, h3, h4, h5, h6,
 dl, dt, dd, ol, ul, li,
@@ -137,13 +132,13 @@ h3.headline {
 .banner {
   padding: 0 1em 1em;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 
 @media screen and (min-width: 60em) {
   .banner {
     margin: 0 auto 30px;
-    text-align: center;
   }
 
   .banner a {
@@ -160,8 +155,11 @@ h3.headline {
 
 .pageHeader {
   line-height: 1;
-  margin-top: 0rem;
+  margin: 0 auto 2rem;
   text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .pageHeader__logo {
@@ -192,6 +190,7 @@ h3.headline {
 
 .sanskrit {
   display: none;
+  width: 164px;
   height: 37px;
   background: url(img/sanskrit.svg) no-repeat center;
   background-size: contain;
