Tweak yoga class content
- Add 700 weight of font for more contrast
- Add new `.meta__item--headline` modifier
- Update content

--- a/main.css
+++ b/main.css
@@ -270,6 +270,12 @@ h3.headline {
   margin-bottom: 0.25em;
 }
 
+.meta__item--headline {
+  font-size: 1em;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
 
 /* Content ---------------------------------------- */
 
