--- a/main.css
+++ b/main.css
@@ -24,12 +24,10 @@ body {
 }
 
 a {
-  transition: all .2s;
-}
-
-a:link {
   color: #fff;
   text-decoration: none;
+  border-bottom: 1px solid hsla(48, 89%, 60%, 0.5);
+  transition: all .2s;
 }
 
 a:visited {
@@ -37,7 +35,8 @@ a:visited {
 }
 
 a:hover {
-  text-shadow: 2px 2px 5px #222;
+  color: #fff;
+  border-bottom-color: hsla(48, 89%, 80%, 0.9);
 }
 
 button,
@@ -120,7 +119,7 @@ input[type="image"]:focus {
 .headline {
   font-weight: inherit;
   margin: 1em 0 0.5em;
-  text-shadow: 2px 2px 5px #222;
+  text-shadow: 2px 2px 5px hsla(0, 0%, 30%, 0.7);
 }
 
 h1.headline {
@@ -175,6 +174,10 @@ h3.headline {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.pageHeader__link {
+  border: none;
 }
 
 .pageHeader__logo {
@@ -306,7 +309,7 @@ h3.headline {
 .callToAction:active {
   color: #4d4d4d;
   background-color: hsl(48, 89%, 78%);
-  text-shadow: none;
+  border: none;
 }
 
 .callToAction:hover,
