Class is cancelled!!
Added an h2 element as a temporary “class cancelled” headline.

--- a/main.css
+++ b/main.css
@@ -70,6 +70,10 @@ input[type="image"]:focus {
   text-transform: uppercase;
 }
 
+.attention {
+  color: red;
+}
+
 
 /* Grid system ---------------------------------------- */
 
