Make grid rows 100% wide. Dunno what happened here.

--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ input[type="image"]:focus {
   .gridCell--row {
     display: flex;
     flex-direction: row;
+    width: 100%;
   }
 
   .gridCell--padded {
